// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromotionCard should handle "promotionType" prop 1`] = `
<div>
  <div
    class="root"
    data-testid="promotion-card"
  >
    <a
      class="link"
    >
      <div
        class="banner"
      >
        <img
          alt="Hello, world!"
          class="image"
          src="https://www.images.com/123"
        />
        <div
          class="banner-content"
        >
          <div
            class="discount"
            data-testid="promotion-card:banner-discount"
          >
            скидки до
            <div
              class="percent"
            >
              23
              %
            </div>
          </div>
        </div>
      </div>
      <div
        class="info"
      >
        <div
          class="header"
        >
          <h4
            class="title"
          >
            Hello, world!
          </h4>
          <p
            class="subtitle"
          >
            Foo, bar, baz...
          </p>
        </div>
        <div
          class="footer"
        >
          <div
            class="name"
            data-testid="promotion-card:name"
          >
            Скидка за объём
          </div>
          <time
            data-testid="promotion-card:due-date"
          >
            до 1 янв
          </time>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`PromotionCard should have placeholder component property 1`] = `
<div>
  <div
    data-testid="promotion-card:placeholder"
  >
    <div
      class="part banner"
    />
    <div
      class="part text"
    />
    <div
      class="part text"
    />
  </div>
</div>
`;

exports[`PromotionCard should render with "type=special" 1`] = `
<div
  class="banner"
>
  <img
    alt="Hello, world!"
    class="image"
    src="https://www.images.com/123"
  />
  <div
    class="banner-content with-timer"
  >
    <div
      class="timer"
      data-testid="promotion-card:banner-timer"
    >
      <svg
        class="part"
        fill="#3a3a3b"
        viewBox="0 0 40 40"
      >
        <text
          class="value"
          text-anchor="middle"
          x="20"
          y="65%"
        >
          00
        </text>
        <text
          class="label"
          dy="95%"
          text-anchor="middle"
          x="20"
          y="0"
        >
          дней
        </text>
      </svg>
      <svg
        class="divider-wrap"
        fill="#3a3a3b"
        viewBox="0 0 12 40"
      >
        <text
          class="divider"
          text-anchor="middle"
          x="6"
          y="78%"
        >
          :
        </text>
      </svg>
      <svg
        class="part"
        fill="#3a3a3b"
        viewBox="0 0 40 40"
      >
        <text
          class="value"
          text-anchor="middle"
          x="20"
          y="65%"
        >
          00
        </text>
        <text
          class="label"
          dy="95%"
          text-anchor="middle"
          x="20"
          y="0"
        >
          часов
        </text>
      </svg>
      <svg
        class="divider-wrap"
        fill="#3a3a3b"
        viewBox="0 0 12 40"
      >
        <text
          class="divider"
          text-anchor="middle"
          x="6"
          y="78%"
        >
          :
        </text>
      </svg>
      <svg
        class="part"
        fill="#3a3a3b"
        viewBox="0 0 40 40"
      >
        <text
          class="value"
          text-anchor="middle"
          x="20"
          y="65%"
        >
          00
        </text>
        <text
          class="label"
          dy="95%"
          text-anchor="middle"
          x="20"
          y="0"
        >
          минут
        </text>
      </svg>
    </div>
  </div>
</div>
`;

exports[`PromotionCard should renders correctly 1`] = `
<div>
  <div
    class="root"
    data-testid="promotion-card"
  >
    <a
      class="link"
    >
      <div
        class="banner"
      >
        <img
          alt="Hello, world!"
          class="image"
          src="https://www.images.com/123"
        />
      </div>
      <div
        class="info"
      >
        <div
          class="header"
        >
          <h4
            class="title"
          >
            Hello, world!
          </h4>
          <p
            class="subtitle"
          >
            Foo, bar, baz...
          </p>
        </div>
        <div
          class="footer"
        >
          <time
            data-testid="promotion-card:due-date"
          >
            до 1 янв
          </time>
        </div>
      </div>
    </a>
  </div>
</div>
`;
